Contrast text input fix

--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -173,3 +173,6 @@ body {
   color: yellow !important;
   border: solid 1px yellow !important;
 }
+.high-contrast-bordered input{
+  color: black !important;
+}
