--- a/src/app/main-page/main-page.component.scss
+++ b/src/app/main-page/main-page.component.scss
@@ -134,3 +134,7 @@ svg.material-icons:not(:last-child) {
   color: yellow !important;
   border: solid 1px yellow;
 }
+
+.high-contrast-bordered input{
+  color: black;
+}
