--- a/src/app/personal-data-page/personal-data-page.component.scss
+++ b/src/app/personal-data-page/personal-data-page.component.scss
@@ -188,6 +188,10 @@
   border: solid 1px yellow !important;
 }
 
+.high-contrast-bordered input{
+  color: #070707 !important;
+}
+
 .high-contrast-background {
   background-color: yellow !important;
   color: black !important;
