--- a/src/app/register/register.component.scss
+++ b/src/app/register/register.component.scss
@@ -142,3 +142,6 @@ body {
   color: yellow !important;
   border: solid 1px yellow !important;
 }
+.high-contrast-bordered input {
+  color: black !important;
+}
